--- a/regression_analysis.ipynb
+++ b/regression_analysis.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>1976-08-02</td>\n",
+       "      <th>1976-08-02</th>\n",
        "      <td>3398.0</td>\n",
        "      <td>3401.0</td>\n",
        "      <td>3398.0</td>\n",
@@ -80,7 +80,7 @@
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1976-08-03</td>\n",
+       "      <th>1976-08-03</th>\n",
        "      <td>3401.0</td>\n",
        "      <td>3401.0</td>\n",
        "      <td>3401.0</td>\n",
@@ -91,7 +91,7 @@
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1976-08-04</td>\n",
+       "      <th>1976-08-04</th>\n",
        "      <td>3401.0</td>\n",
        "      <td>3401.0</td>\n",
        "      <td>3401.0</td>\n",
@@ -102,7 +102,7 @@
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1976-08-05</td>\n",
+       "      <th>1976-08-05</th>\n",
        "      <td>3401.0</td>\n",
        "      <td>3401.0</td>\n",
        "      <td>3401.0</td>\n",
@@ -113,7 +113,7 @@
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1976-08-06</td>\n",
+       "      <th>1976-08-06</th>\n",
        "      <td>3401.0</td>\n",
        "      <td>3401.0</td>\n",
        "      <td>3401.0</td>\n",
@@ -145,7 +145,7 @@
        "1976-08-06                         1.0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>1990-01-02</td>\n",
+       "      <th>1990-01-02</th>\n",
        "      <td>6954.0</td>\n",
        "      <td>6954.0</td>\n",
        "      <td>6835.0</td>\n",
@@ -219,7 +219,7 @@
        "      <td>51473.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1990-01-03</td>\n",
+       "      <th>1990-01-03</th>\n",
        "      <td>6877.0</td>\n",
        "      <td>6910.0</td>\n",
        "      <td>6865.0</td>\n",
@@ -230,7 +230,7 @@
        "      <td>53860.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1990-01-04</td>\n",
+       "      <th>1990-01-04</th>\n",
        "      <td>6937.0</td>\n",
        "      <td>7030.0</td>\n",
        "      <td>6924.0</td>\n",
@@ -241,7 +241,7 @@
        "      <td>55699.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1990-01-05</td>\n",
+       "      <th>1990-01-05</th>\n",
        "      <td>6952.0</td>\n",
        "      <td>6985.0</td>\n",
        "      <td>6942.0</td>\n",
@@ -252,7 +252,7 @@
        "      <td>53111.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1990-01-08</td>\n",
+       "      <th>1990-01-08</th>\n",
        "      <td>6936.0</td>\n",
        "      <td>6972.0</td>\n",
        "      <td>6936.0</td>\n",
@@ -284,7 +284,7 @@
        "1990-01-08                     52072.0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -360,64 +360,64 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>2019-10-09</td>\n",
-       "      <td>9381.0</td>\n",
-       "      <td>9391.5</td>\n",
-       "      <td>9330.5</td>\n",
-       "      <td>9343.5</td>\n",
-       "      <td>38.5</td>\n",
-       "      <td>9338.0</td>\n",
-       "      <td>99153.0</td>\n",
-       "      <td>145470.0</td>\n",
-       "      <td>-0.410601</td>\n",
+       "      <th>2014-02-18</th>\n",
+       "      <td>9831.0</td>\n",
+       "      <td>9865.0</td>\n",
+       "      <td>9734.0</td>\n",
+       "      <td>9775.0</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>9775.0</td>\n",
+       "      <td>203495.0</td>\n",
+       "      <td>196924.0</td>\n",
+       "      <td>-0.427829</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2019-10-10</td>\n",
-       "      <td>9343.5</td>\n",
-       "      <td>9380.5</td>\n",
-       "      <td>9293.5</td>\n",
-       "      <td>9301.0</td>\n",
-       "      <td>34.5</td>\n",
-       "      <td>9303.5</td>\n",
-       "      <td>159397.0</td>\n",
-       "      <td>144474.0</td>\n",
-       "      <td>-0.369458</td>\n",
+       "      <th>2014-02-19</th>\n",
+       "      <td>9768.0</td>\n",
+       "      <td>9825.0</td>\n",
+       "      <td>9760.0</td>\n",
+       "      <td>9773.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>9773.0</td>\n",
+       "      <td>129508.0</td>\n",
+       "      <td>197197.0</td>\n",
+       "      <td>-0.020460</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2019-10-11</td>\n",
-       "      <td>9308.5</td>\n",
-       "      <td>9309.0</td>\n",
-       "      <td>9240.0</td>\n",
-       "      <td>9267.0</td>\n",
-       "      <td>52.5</td>\n",
-       "      <td>9251.0</td>\n",
-       "      <td>158810.0</td>\n",
-       "      <td>147471.0</td>\n",
-       "      <td>-0.564304</td>\n",
+       "      <th>2014-02-20</th>\n",
+       "      <td>9774.0</td>\n",
+       "      <td>9837.0</td>\n",
+       "      <td>9765.0</td>\n",
+       "      <td>9775.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>9775.0</td>\n",
+       "      <td>160202.0</td>\n",
+       "      <td>198280.0</td>\n",
+       "      <td>0.020465</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2019-10-14</td>\n",
-       "      <td>9259.0</td>\n",
-       "      <td>9292.0</td>\n",
-       "      <td>9250.5</td>\n",
-       "      <td>9261.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>9265.0</td>\n",
-       "      <td>69457.0</td>\n",
-       "      <td>153902.0</td>\n",
-       "      <td>0.151335</td>\n",
+       "      <th>2014-02-21</th>\n",
+       "      <td>9772.0</td>\n",
+       "      <td>9776.0</td>\n",
+       "      <td>9725.0</td>\n",
+       "      <td>9758.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>9755.0</td>\n",
+       "      <td>103091.0</td>\n",
+       "      <td>202990.0</td>\n",
+       "      <td>-0.204604</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2019-10-15</td>\n",
-       "      <td>9264.5</td>\n",
-       "      <td>9280.0</td>\n",
-       "      <td>9216.5</td>\n",
-       "      <td>9220.0</td>\n",
-       "      <td>43.5</td>\n",
-       "      <td>9221.5</td>\n",
-       "      <td>108342.0</td>\n",
-       "      <td>151564.0</td>\n",
-       "      <td>-0.469509</td>\n",
+       "      <th>2014-02-24</th>\n",
+       "      <td>9752.0</td>\n",
+       "      <td>9789.0</td>\n",
+       "      <td>9740.0</td>\n",
+       "      <td>9757.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>9757.0</td>\n",
+       "      <td>90654.0</td>\n",
+       "      <td>203114.0</td>\n",
+       "      <td>0.020502</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -426,22 +426,22 @@
       "text/plain": [
        "              Open    High     Low    Last  Change  Settle    Volume  \\\n",
        "Date                                                                   \n",
-       "2019-10-09  9381.0  9391.5  9330.5  9343.5    38.5  9338.0   99153.0   \n",
-       "2019-10-10  9343.5  9380.5  9293.5  9301.0    34.5  9303.5  159397.0   \n",
-       "2019-10-11  9308.5  9309.0  9240.0  9267.0    52.5  9251.0  158810.0   \n",
-       "2019-10-14  9259.0  9292.0  9250.5  9261.0    14.0  9265.0   69457.0   \n",
-       "2019-10-15  9264.5  9280.0  9216.5  9220.0    43.5  9221.5  108342.0   \n",
+       "2014-02-18  9831.0  9865.0  9734.0  9775.0    42.0  9775.0  203495.0   \n",
+       "2014-02-19  9768.0  9825.0  9760.0  9773.0     2.0  9773.0  129508.0   \n",
+       "2014-02-20  9774.0  9837.0  9765.0  9775.0     2.0  9775.0  160202.0   \n",
+       "2014-02-21  9772.0  9776.0  9725.0  9758.0    20.0  9755.0  103091.0   \n",
+       "2014-02-24  9752.0  9789.0  9740.0  9757.0     2.0  9757.0   90654.0   \n",
        "\n",
        "            Previous Day Open Interest    Return  \n",
        "Date                                              \n",
-       "2019-10-09                    145470.0 -0.410601  \n",
-       "2019-10-10                    144474.0 -0.369458  \n",
-       "2019-10-11                    147471.0 -0.564304  \n",
-       "2019-10-14                    153902.0  0.151335  \n",
-       "2019-10-15                    151564.0 -0.469509  "
+       "2014-02-18                    196924.0 -0.427829  \n",
+       "2014-02-19                    197197.0 -0.020460  \n",
+       "2014-02-20                    198280.0  0.020465  \n",
+       "2014-02-21                    202990.0 -0.204604  \n",
+       "2014-02-24                    203114.0  0.020502  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,11 @@
     "# Create a series using \"Settle\" price percentage returns, drop any nan\"s, and check the results:\n",
     "# (Make sure to multiply the pct_change() results by 100)\n",
     "# In this case, you may have to replace inf, -inf values with np.nan\"s\n",
-    "# YOUR CODE HERE!"
+    "returns = yen_futures.Settle.pct_change() * 100\n",
+    "\n",
+    "yen_futures['Return'] = returns.copy()\n",
+    "yen_futures = yen_futures.dropna()\n",
+    "yen_futures.head()\n"
    ]
   },
   {
@@ -462,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -513,69 +517,69 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>2019-10-09</td>\n",
-       "      <td>9381.0</td>\n",
-       "      <td>9391.5</td>\n",
-       "      <td>9330.5</td>\n",
-       "      <td>9343.5</td>\n",
-       "      <td>38.5</td>\n",
-       "      <td>9338.0</td>\n",
-       "      <td>99153.0</td>\n",
-       "      <td>145470.0</td>\n",
-       "      <td>-0.410601</td>\n",
-       "      <td>0.170931</td>\n",
+       "      <th>2014-02-18</th>\n",
+       "      <td>9831.0</td>\n",
+       "      <td>9865.0</td>\n",
+       "      <td>9734.0</td>\n",
+       "      <td>9775.0</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>9775.0</td>\n",
+       "      <td>203495.0</td>\n",
+       "      <td>196924.0</td>\n",
+       "      <td>-0.427829</td>\n",
+       "      <td>0.409123</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2019-10-10</td>\n",
-       "      <td>9343.5</td>\n",
-       "      <td>9380.5</td>\n",
-       "      <td>9293.5</td>\n",
-       "      <td>9301.0</td>\n",
-       "      <td>34.5</td>\n",
-       "      <td>9303.5</td>\n",
-       "      <td>159397.0</td>\n",
-       "      <td>144474.0</td>\n",
-       "      <td>-0.369458</td>\n",
-       "      <td>-0.410601</td>\n",
+       "      <th>2014-02-19</th>\n",
+       "      <td>9768.0</td>\n",
+       "      <td>9825.0</td>\n",
+       "      <td>9760.0</td>\n",
+       "      <td>9773.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>9773.0</td>\n",
+       "      <td>129508.0</td>\n",
+       "      <td>197197.0</td>\n",
+       "      <td>-0.020460</td>\n",
+       "      <td>-0.427829</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2019-10-11</td>\n",
-       "      <td>9308.5</td>\n",
-       "      <td>9309.0</td>\n",
-       "      <td>9240.0</td>\n",
-       "      <td>9267.0</td>\n",
-       "      <td>52.5</td>\n",
-       "      <td>9251.0</td>\n",
-       "      <td>158810.0</td>\n",
-       "      <td>147471.0</td>\n",
-       "      <td>-0.564304</td>\n",
-       "      <td>-0.369458</td>\n",
+       "      <th>2014-02-20</th>\n",
+       "      <td>9774.0</td>\n",
+       "      <td>9837.0</td>\n",
+       "      <td>9765.0</td>\n",
+       "      <td>9775.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>9775.0</td>\n",
+       "      <td>160202.0</td>\n",
+       "      <td>198280.0</td>\n",
+       "      <td>0.020465</td>\n",
+       "      <td>-0.020460</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2019-10-14</td>\n",
-       "      <td>9259.0</td>\n",
-       "      <td>9292.0</td>\n",
-       "      <td>9250.5</td>\n",
-       "      <td>9261.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>9265.0</td>\n",
-       "      <td>69457.0</td>\n",
-       "      <td>153902.0</td>\n",
-       "      <td>0.151335</td>\n",
-       "      <td>-0.564304</td>\n",
+       "      <th>2014-02-21</th>\n",
+       "      <td>9772.0</td>\n",
+       "      <td>9776.0</td>\n",
+       "      <td>9725.0</td>\n",
+       "      <td>9758.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>9755.0</td>\n",
+       "      <td>103091.0</td>\n",
+       "      <td>202990.0</td>\n",
+       "      <td>-0.204604</td>\n",
+       "      <td>0.020465</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2019-10-15</td>\n",
-       "      <td>9264.5</td>\n",
-       "      <td>9280.0</td>\n",
-       "      <td>9216.5</td>\n",
-       "      <td>9220.0</td>\n",
-       "      <td>43.5</td>\n",
-       "      <td>9221.5</td>\n",
-       "      <td>108342.0</td>\n",
-       "      <td>151564.0</td>\n",
-       "      <td>-0.469509</td>\n",
-       "      <td>0.151335</td>\n",
+       "      <th>2014-02-24</th>\n",
+       "      <td>9752.0</td>\n",
+       "      <td>9789.0</td>\n",
+       "      <td>9740.0</td>\n",
+       "      <td>9757.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>9757.0</td>\n",
+       "      <td>90654.0</td>\n",
+       "      <td>203114.0</td>\n",
+       "      <td>0.020502</td>\n",
+       "      <td>-0.204604</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -584,29 +588,31 @@
       "text/plain": [
        "              Open    High     Low    Last  Change  Settle    Volume  \\\n",
        "Date                                                                   \n",
-       "2019-10-09  9381.0  9391.5  9330.5  9343.5    38.5  9338.0   99153.0   \n",
-       "2019-10-10  9343.5  9380.5  9293.5  9301.0    34.5  9303.5  159397.0   \n",
-       "2019-10-11  9308.5  9309.0  9240.0  9267.0    52.5  9251.0  158810.0   \n",
-       "2019-10-14  9259.0  9292.0  9250.5  9261.0    14.0  9265.0   69457.0   \n",
-       "2019-10-15  9264.5  9280.0  9216.5  9220.0    43.5  9221.5  108342.0   \n",
+       "2014-02-18  9831.0  9865.0  9734.0  9775.0    42.0  9775.0  203495.0   \n",
+       "2014-02-19  9768.0  9825.0  9760.0  9773.0     2.0  9773.0  129508.0   \n",
+       "2014-02-20  9774.0  9837.0  9765.0  9775.0     2.0  9775.0  160202.0   \n",
+       "2014-02-21  9772.0  9776.0  9725.0  9758.0    20.0  9755.0  103091.0   \n",
+       "2014-02-24  9752.0  9789.0  9740.0  9757.0     2.0  9757.0   90654.0   \n",
        "\n",
        "            Previous Day Open Interest    Return  Lagged_Return  \n",
        "Date                                                             \n",
-       "2019-10-09                    145470.0 -0.410601       0.170931  \n",
-       "2019-10-10                    144474.0 -0.369458      -0.410601  \n",
-       "2019-10-11                    147471.0 -0.564304      -0.369458  \n",
-       "2019-10-14                    153902.0  0.151335      -0.564304  \n",
-       "2019-10-15                    151564.0 -0.469509       0.151335  "
+       "2014-02-18                    196924.0 -0.427829       0.409123  \n",
+       "2014-02-19                    197197.0 -0.020460      -0.427829  \n",
+       "2014-02-20                    198280.0  0.020465      -0.020460  \n",
+       "2014-02-21                    202990.0 -0.204604       0.020465  \n",
+       "2014-02-24                    203114.0  0.020502      -0.204604  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create a lagged return using the shift function\n",
-    "# YOUR CODE HERE!"
+    "yen_futures['Lagged_Return'] = returns.shift()\n",
+    "yen_futures = yen_futures.dropna()\n",
+    "yen_futures.head()"
    ]
   },
   {
@@ -618,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -934,9 +940,9 @@
  "metadata": {
   "file_extension": ".py",
   "kernelspec": {
-   "display_name": "dev",
+   "display_name": "Python [conda env:mlenv]",
    "language": "python",
-   "name": "dev"
+   "name": "conda-env-mlenv-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -948,7 +954,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   },
   "mimetype": "text/x-python",
   "name": "python",
