--- a/regression_analysis.ipynb
+++ b/regression_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        "1976-08-06                         1.0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
        "1990-01-08                     52072.0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
        "2014-02-24                    203114.0  0.020502  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +603,7 @@
        "2014-02-24                    203114.0  0.020502      -0.204604  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,19 +635,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create four dataframes:\n",
     "# X_train (training set using just the independent variables), X_test (test set of of just the independent variables)\n",
     "# Y_train (training set using just the \"y\" variable, i.e., \"Futures Return\"), Y_test (test set of just the \"y\" variable):\n",
-    "# YOUR CODE HERE!"
+    "# YOUR CODE HERE!\n",
+    "\n",
+    "X_train = train.iloc[:,0:-2]\n",
+    "y_train = train.Return.copy()\n",
+    "x_test = \n",
+    "y_test = "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -671,82 +676,187 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Lagged_Return</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Last</th>\n",
+       "      <th>Change</th>\n",
+       "      <th>Settle</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Previous Day Open Interest</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>2014-02-19</td>\n",
-       "      <td>-0.427829</td>\n",
+       "      <th>2014-02-18</th>\n",
+       "      <td>9831.0</td>\n",
+       "      <td>9865.0</td>\n",
+       "      <td>9734.0</td>\n",
+       "      <td>9775.0</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>9775.0</td>\n",
+       "      <td>203495.0</td>\n",
+       "      <td>196924.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2014-02-20</td>\n",
-       "      <td>-0.020460</td>\n",
+       "      <th>2014-02-19</th>\n",
+       "      <td>9768.0</td>\n",
+       "      <td>9825.0</td>\n",
+       "      <td>9760.0</td>\n",
+       "      <td>9773.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>9773.0</td>\n",
+       "      <td>129508.0</td>\n",
+       "      <td>197197.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2014-02-21</td>\n",
-       "      <td>0.020465</td>\n",
+       "      <th>2014-02-20</th>\n",
+       "      <td>9774.0</td>\n",
+       "      <td>9837.0</td>\n",
+       "      <td>9765.0</td>\n",
+       "      <td>9775.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>9775.0</td>\n",
+       "      <td>160202.0</td>\n",
+       "      <td>198280.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2014-02-24</td>\n",
-       "      <td>-0.204604</td>\n",
+       "      <th>2014-02-21</th>\n",
+       "      <td>9772.0</td>\n",
+       "      <td>9776.0</td>\n",
+       "      <td>9725.0</td>\n",
+       "      <td>9758.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>9755.0</td>\n",
+       "      <td>103091.0</td>\n",
+       "      <td>202990.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2014-02-25</td>\n",
-       "      <td>0.020502</td>\n",
+       "      <th>2014-02-24</th>\n",
+       "      <td>9752.0</td>\n",
+       "      <td>9789.0</td>\n",
+       "      <td>9740.0</td>\n",
+       "      <td>9757.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>9757.0</td>\n",
+       "      <td>90654.0</td>\n",
+       "      <td>203114.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2018-12-24</td>\n",
-       "      <td>-0.187545</td>\n",
+       "      <th>2017-12-22</th>\n",
+       "      <td>8871.0</td>\n",
+       "      <td>8882.5</td>\n",
+       "      <td>8864.5</td>\n",
+       "      <td>8880.5</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>8881.0</td>\n",
+       "      <td>71339.0</td>\n",
+       "      <td>230870.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2018-12-26</td>\n",
-       "      <td>0.834485</td>\n",
+       "      <th>2017-12-26</th>\n",
+       "      <td>8879.0</td>\n",
+       "      <td>8898.5</td>\n",
+       "      <td>8873.5</td>\n",
+       "      <td>8884.5</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>8891.5</td>\n",
+       "      <td>33864.0</td>\n",
+       "      <td>229084.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2018-12-27</td>\n",
-       "      <td>-0.893346</td>\n",
+       "      <th>2017-12-27</th>\n",
+       "      <td>8887.0</td>\n",
+       "      <td>8895.0</td>\n",
+       "      <td>8869.0</td>\n",
+       "      <td>8870.5</td>\n",
+       "      <td>13.5</td>\n",
+       "      <td>8878.0</td>\n",
+       "      <td>86378.0</td>\n",
+       "      <td>228295.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2018-12-28</td>\n",
-       "      <td>0.464525</td>\n",
+       "      <th>2017-12-28</th>\n",
+       "      <td>8871.0</td>\n",
+       "      <td>8910.5</td>\n",
+       "      <td>8862.0</td>\n",
+       "      <td>8894.5</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>8894.0</td>\n",
+       "      <td>78456.0</td>\n",
+       "      <td>231355.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2018-12-31</td>\n",
-       "      <td>0.297242</td>\n",
+       "      <th>2017-12-29</th>\n",
+       "      <td>8892.0</td>\n",
+       "      <td>8924.5</td>\n",
+       "      <td>8884.5</td>\n",
+       "      <td>8908.5</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>8914.0</td>\n",
+       "      <td>80225.0</td>\n",
+       "      <td>229269.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1218 rows × 1 columns</p>\n",
+       "<p>967 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            Lagged_Return\n",
-       "Date                     \n",
-       "2014-02-19      -0.427829\n",
-       "2014-02-20      -0.020460\n",
-       "2014-02-21       0.020465\n",
-       "2014-02-24      -0.204604\n",
-       "2014-02-25       0.020502\n",
-       "...                   ...\n",
-       "2018-12-24      -0.187545\n",
-       "2018-12-26       0.834485\n",
-       "2018-12-27      -0.893346\n",
-       "2018-12-28       0.464525\n",
-       "2018-12-31       0.297242\n",
+       "              Open    High     Low    Last  Change  Settle    Volume  \\\n",
+       "Date                                                                   \n",
+       "2014-02-18  9831.0  9865.0  9734.0  9775.0    42.0  9775.0  203495.0   \n",
+       "2014-02-19  9768.0  9825.0  9760.0  9773.0     2.0  9773.0  129508.0   \n",
+       "2014-02-20  9774.0  9837.0  9765.0  9775.0     2.0  9775.0  160202.0   \n",
+       "2014-02-21  9772.0  9776.0  9725.0  9758.0    20.0  9755.0  103091.0   \n",
+       "2014-02-24  9752.0  9789.0  9740.0  9757.0     2.0  9757.0   90654.0   \n",
+       "...            ...     ...     ...     ...     ...     ...       ...   \n",
+       "2017-12-22  8871.0  8882.5  8864.5  8880.5    10.5  8881.0   71339.0   \n",
+       "2017-12-26  8879.0  8898.5  8873.5  8884.5    10.5  8891.5   33864.0   \n",
+       "2017-12-27  8887.0  8895.0  8869.0  8870.5    13.5  8878.0   86378.0   \n",
+       "2017-12-28  8871.0  8910.5  8862.0  8894.5    16.0  8894.0   78456.0   \n",
+       "2017-12-29  8892.0  8924.5  8884.5  8908.5    20.0  8914.0   80225.0   \n",
        "\n",
-       "[1218 rows x 1 columns]"
+       "            Previous Day Open Interest  \n",
+       "Date                                    \n",
+       "2014-02-18                    196924.0  \n",
+       "2014-02-19                    197197.0  \n",
+       "2014-02-20                    198280.0  \n",
+       "2014-02-21                    202990.0  \n",
+       "2014-02-24                    203114.0  \n",
+       "...                                ...  \n",
+       "2017-12-22                    230870.0  \n",
+       "2017-12-26                    229084.0  \n",
+       "2017-12-27                    228295.0  \n",
+       "2017-12-28                    231355.0  \n",
+       "2017-12-29                    229269.0  \n",
+       "\n",
+       "[967 rows x 8 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
